- fixed dropdown checkbox - Updated styles on "lesson" and "image" toggle in the search panel - removed white space

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -237,6 +237,7 @@ text-decoration: none;
 
 .customized-checkbox input {
     position: absolute;
+    top: 0;
     right:3px;
 }
 
